--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;0,700;1,600&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     
     <!-- Logo -->
     <link rel="icon" href="images/logo.svg">
@@ -94,7 +94,7 @@
     <script src="./js/Path_Finding_Algorithms/depth_first_search.js"></script>
     <script src="./js/Maze_Generator/Recursive_Maze_generation.js"></script>
     <script src="./js/Maze_Generator/Random_walls.js"></script>
-    <script src="./js/project.js"></script>
+    <script src="./project.js"></script>
 
   </body>
 </html>
